# natskell

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  .hlint.yaml  20.0.stack.yaml  84.Dockerfile  912.Dockerfile  914.Dockerfile  AGENTS.md  AGENT_LESSONS.md  LICENSE  Makefile  README.md  cabal.project.system-tests  dump.txt  flake.nix  in.txt  natskell.cabal  natskell_BACKUP_124742.cabal  natskell_BASE_124742.cabal  natskell_LOCAL_124742.cabal  natskell_REMOTE_124742.cabal  profile.md  shell.nix  stack.yaml  stack_prev.yaml  stylish.yaml
.github/workflows/: ghc-matrix.yml  hackage.yml  haskell.yml  main.yml  main_merge.yml  package.yml  pages.yml  pr.yml
bench/: Main.hs
client/: API.hs  Broadcasting.hs  Client.hs  Client2.hs  MSGView.hs  Nats.hs  Options.hs  Pub.hs  Sid.hs  State.hs  Streaming.hs  StrictLock.hs  Sub.hs  Types.hs  Unsub.hs
client/Auth/: NKey.hs
client/Client/: Auth.hs  Implementation.hs  Lifecycle.hs  Runtime.hs  Subscription.hs  Types.hs
client/Crypto/: NKey.hs
client/JetStream/: API.hs  Client.hs
client/Nats/: Client.hs  JetStream.hs  Message.hs  Subscription.hs
client/Network/: Connection.hs
docs/adr/: 0001-parser-backend-abstraction.md
docs/plans/: 2026-01-22-jwt-nkey-auth.md
internal/: Parser.hs  natskell-internal.cabal
internal/Auth/: NKey.hs
internal/Buffer/: Buffer.hs
internal/Client/: API.hs  Auth.hs  Callbacks.hs  CallbacksAPI.hs  Internal.hs  Lifecycle.hs  LifecycleAPI.hs  PublishAPI.hs  Runtime.hs  RuntimeAPI.hs  Subscription.hs  SubscriptionAPI.hs
internal/Lib/: Builder.hs  CallOption.hs  Exception.hs  Logger.hs  LoggerAPI.hs  Parser.hs  ParserAPI.hs  WaitGroup.hs  WorkerPool.hs
internal/Lib/Logger/: Types.hs
internal/Lib/Parser/: Types.hs
internal/Nats/: Nats.hs  NatsProper.hs
internal/Network/: API.hs  Connection.hs  ConnectionAPI.hs
internal/Network/Connection/: Core.hs  Tcp.hs  Tls.hs  Types.hs
internal/Outbox/: Outbox.hs
internal/Parser/: API.hs  Nats.hs  Types.hs
internal/Parsers/: Parsers.hs
internal/Pipeline/: Broadcasting.hs  Connection.hs  Operator.hs  Status.hs  Streaming.hs
internal/Pipeline/Broadcasting/: API.hs  Sink.hs  Source.hs  Transformer.hs
internal/Pipeline/Streaming/: API.hs  Parser.hs  Sink.hs  Source.hs
internal/Plumbing/Network/: Connection.hs  ConnectionAPI.hs
internal/Plumbing/Network/Connection/: Core.hs  Tcp.hs  Tls.hs  Types.hs
internal/Plumbing/Parser/: API.hs  Attoparsec.hs  Combinators.hs  Nats.hs
internal/Plumbing/Pipeline/: Broadcasting.hs  Streaming.hs
internal/Plumbing/Pipeline/Broadcasting/: API.hs  Sink.hs  Source.hs  Transformer.hs
internal/Plumbing/Pipeline/Streaming/: API.hs  Parser.hs  Sink.hs  Source.hs
internal/Plumbing/Queue/: API.hs  TransactionalQueue.hs
internal/Plumbing/Validators/: Validators.hs
internal/Policy/: Engine.hs  Publish.hs
internal/Policy/Auth/: Config.hs  Credentials.hs  Jwt.hs  NKey.hs  None.hs  Resolver.hs  Token.hs  Types.hs  UserPass.hs
internal/Policy/Auth/NKey/: Codec.hs
internal/Policy/Handshake/: Nats.hs
internal/Policy/Publish/: Config.hs
internal/Policy/Router/: Nats.hs
internal/Policy/State/: Store.hs  Types.hs
internal/Policy/Subscription/: Store.hs  Types.hs
internal/Queue/: API.hs  TransactionalQueue.hs  TransactionalQueueAPI.hs
internal/Queue/TransactionalQueue/: Types.hs
internal/Transformers/: Transformers.hs  TransformersAPI.hs  Types.hs
internal/Types/: Connect.hs  Err.hs  Info.hs  Msg.hs  Nuid.hs  NuidAPI.hs  Ok.hs  Ping.hs  Pong.hs  Pub.hs  Sid.hs  SidAPI.hs  Sub.hs  TLS.hs  Unsub.hs
internal/Types/Connect/: Types.hs
internal/Types/Err/: Types.hs
internal/Types/Info/: Types.hs
internal/Types/Nuid/: Types.hs
internal/Types/Sid/: Types.hs
internal/Validators/: Validators.hs
jetstream/: JetStream.hs
jetstream-client/JetStream/: API.hs  Client.hs
jetstream/JetStream/: API.hs  Consumer.hs  Error.hs  KeyValue.hs  Management.hs  Message.hs  Options.hs  Publish.hs  Stream.hs  Types.hs
src/: Client.hs  Connect.hs  Err.hs  Info.hs  Msg.hs  Ok.hs  Parser.hs  Ping.hs  Pong.hs  Pub.hs  Sub.hs  Unsub.hs
src/Lib/: Parser.hs
src/Parsers/: Parsers.hs
src/Transformers/: Transformers.hs
src/Types/: Connect.hs  Info.hs  Messages.hs  Msg.hs  Ok.hs  Ping.hs  Pong.hs  Pub.hs  Sub.hs  Unsub.hs
src/Validators/: Validators.hs
system-tests/: natskell-system-tests.cabal
system-tests/fixtures/jwt/: account.jwt  account.pub  operator.jwt  user.creds  user.jwt  user.pub  user.seed
system-tests/fixtures/nkey/: user.nkey  user.pub  user.seed
system-tests/fixtures/nsc/: nsc.json
system-tests/fixtures/nsc/NATSKELL_TEST_OP/: .nsc  NATSKELL_TEST_OP.jwt
system-tests/fixtures/nsc/NATSKELL_TEST_OP/accounts/NATSKELL_TEST_ACC/: NATSKELL_TEST_ACC.jwt
system-tests/fixtures/nsc/NATSKELL_TEST_OP/accounts/NATSKELL_TEST_ACC/users/: NATSKELL_TEST_USER.jwt
system-tests/fixtures/tls/: ca.crt  ca.key  ca.srl  client.crt  client.csr  client.key  server.crt  server.csr  server.key
system-tests/src/: NatsServerConfig.hs  WaitGroup.hs
system-tests/test/System/: ClientAuthJwtCredsSpec.hs  ClientAuthNKeySpec.hs  ClientAuthTlsCertSpec.hs  ClientAuthTlsJwtCredsSpec.hs  ClientAuthTlsNKeySpec.hs  ClientAuthTlsTokenSpec.hs  ClientAuthTlsUserPassSpec.hs  ClientAuthTokenSpec.hs  ClientAuthUserPassSpec.hs  ClientAuthUsersSpec.hs  ClientCloseSpec.hs  ClientCycleSpec.hs  ClientFatalErrorSpec.hs  ClientMessagesSpec.hs  ClientNoServersSpec.hs  ClientPingSpec.hs  ClientRepliesSpec.hs  ClientSpec.hs  JetStreamKeyValueSpec.hs  JetStreamSpec.hs  TestSupport.hs
test/: ClientSpec.hs  ConnectSpec.hs  ErrSpec.hs  InfoSpec.hs  Integration.hs  MsgSpec.hs  NatsWrappers.hs  OkSpec.hs  ParserSpec.hs  PingSpec.hs  PongSpec.hs  PubSpec.hs  SubSpec.hs  UnsubSpec.hs
test/Common/: CallbackAssertions.hs  WaitGroup.hs
test/Fuzz/: ParserSpec.hs  ValidatorsSpec.hs
test/Integration/: ClientSpec.hs
test/PublicAPI/: Main.hs
test/System/: AuthSpec.hs  Client2Spec.hs  ClientSpec.hs  Main.hs  NatsWrappers.hs  Skip.hs
test/Unit/: AuthConnectSpec.hs  BufferSpec.hs  ClientLoadSpec.hs  ClientSpec.hs  ConnectSpec.hs  (+21 more)
(+34 files in other folders)
