cabal-version:          3.0
name:                   natskell
version:                0.0.0.1
synopsis:               A NATS client library written in Haskell
tested-with:
  GHC ==8.8,
  GHC ==8.10,
  GHC ==9.0,
  GHC ==9.2,
  GHC ==9.4,
  GHC ==9.6,
  GHC ==9.8,
  GHC ==9.10,
  GHC ==9.12

-- A longer description of the package.
description:            Please see the README on GitHub at <https://github.com/samisagit/natskell#readme>

-- homepage:

-- A URL where users can report bugs.
bug-reports: https://github.com/samisagit/natskell/issues

license:                MIT
license-file:           LICENSE
author:                 samisagit
maintainer:             sam@whiteteam.co.uk

-- A copyright notice.
-- copyright:

category:               Web

source-repository head
  type:               git
  location:           https://github.com/samisagit/natskell.git

common shared
  default-language:     Haskell2010
  build-depends:
    base  >= 4.13 && < 5,
  ghc-options:
    -haddock -W -Wunused-packages
  pkgconfig-depends: zlib

library
  import:         shared
  build-depends:
    natskell-internal,
    containers >= 0.5 && < 0.7,
    stm  >= 2.5 && < 2.6,
    bytestring  >= 0.10 && < 0.13,
    heap >= 0.6 && < 1.1,
    time >= 1.9 && < 1.13

  exposed-modules:
    Client

  other-modules:
    Client.Auth
    Client.Lifecycle
    Client.Runtime
    Client.Subscription
    Client.Types
    Options
    MSGView
    State

  hs-source-dirs:
       client

library natskell-internal
  import:         shared
  build-depends:
    conduit >= 1.3 && < 1.4,
    bytestring >= 0.10 && < 0.13,
    aeson  >= 2.1 && < 2.3,
    word8  >= 0.0 && < 0.2,
    stm >= 2.5 && < 2.6,
    network  >= 3.1 && < 3.3,
    mtl >= 2.2 && < 2.4,
    cryptonite >= 0.29 && < 0.31,
    memory >= 0.14 && < 0.19,
    random  >= 1.1 && < 1.3,
    network-simple  >= 0.4 && < 0.5,
    tls >= 1.8 && < 3.0,
    text (>= 1.2 && < 1.3) || (>= 2.0 && < 2.2)

  exposed-modules:
    Lib.Parser
    Lib.Logger
    Lib.CallOption
    Parsers.Parsers
    Transformers.Transformers
    Validators.Validators
    Types.Msg
    Types.Ping
    Types.Pong
    Types.Ok
    Types.Err
    Types.Info
    Types.Pub
    Types.Connect
    Types.Sub
    Types.Unsub
    Types
    Sid
    Nuid
    Auth.NKey
    WaitGroup
    Pipeline.Broadcasting.Source
    Pipeline.Broadcasting.Transformer
    Pipeline.Broadcasting.Sink
    Pipeline.Broadcasting.API
    Pipeline.Streaming.API
    Pipeline.Streaming.Source
    Pipeline.Streaming.Parser
    Pipeline.Streaming.Sink
    Network.API
    Network.Connection
    Queue.API
    Queue.TransactionalQueue

  hs-source-dirs:
    internal
    internal/Types
    internal/Parsers
    internal/Transformers
    internal/Validators
    internal/Lib
    internal/Pipeline
    internal/Pipeline/Broadcasting
    internal/Pipeline/Streaming
    internal/Network
    internal/Queue

library test-common
    import:         shared
    build-depends:
      stm >= 2.5 && < 2.6,
    exposed-modules:
      WaitGroup
    hs-source-dirs:
      internal/Lib

test-suite unit-test
  import:         shared
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test/Unit
  main-is:          Spec.hs
  build-depends:   
    natskell-internal,
    hspec >= 2.7 && < 2.12,
    bytestring,
    network,
    cryptonite >= 0.29 && < 0.31,
    memory >= 0.14 && < 0.19,
    tls >= 1.8 && < 3.0,
    word8,
    aeson,
    stm,
    text,
    random

  other-modules:
    ParserSpec
    MsgSpec
    PingSpec
    PongSpec
    OkSpec
    ErrSpec
    InfoSpec
    PubSpec
    ConnectSpec
    SubSpec
    UnsubSpec
    NKeySpec
    ConnectionSpec
    Fixtures
    StreamingSpec
    SidSpec
    NuidSpec
    WaitGroupSpec

test-suite fuzz-test
  import:         shared
  type:                 exitcode-stdio-1.0
  hs-source-dirs:       test/Fuzz
  main-is:              Spec.hs
  build-depends:    
    natskell-internal,
    hspec >= 2.7 && < 2.12,
    bytestring,
    word8,
    QuickCheck >= 2.14 && < 2.17
  other-modules:
    ParserSpec
    ValidatorsSpec

flag impure
  default: False
  manual: True

test-suite client-test
  import:         shared
  hs-source-dirs: test/Integration
  build-depends:
    natskell,
    test-common,
    port-utils >= 0.1 && < 0.3,
    bytestring,
    word8,
    network,
    stm,
    hspec >= 2.7 && < 2.12
  other-modules:
      ClientSpec
  if flag (impure)
    type: exitcode-stdio-1.0
    main-is:              Spec.hs
  else
    type: exitcode-stdio-1.0
    main-is: Skip.hs
