cabal-version: 3.0
name: natskell-system-tests
version: 0.0.0
synopsis: System tests for natskell
description: System test suite for natskell.
license: MIT
license-file: LICENSE
author: samisagit
maintainer: sam@whiteteam.co.uk
category: Web
build-type: Simple

common shared
  default-language: Haskell2010
  ghc-options:
    -haddock -W -Wunused-packages
  build-depends:
    base >= 4.11 && < 5

test-suite test
  import: shared
  type: exitcode-stdio-1.0
  hs-source-dirs:
    test/System
    src
  build-depends:
    natskell,
    bytestring,
    directory,
    stm,
    hspec,
    testcontainers
  other-modules:
    ClientSpec
    NatsServerConfig
    WaitGroup
  main-is: Main.hs
